# weather_ledger

./: .dockerignore  .env.example  .gitignore  AI_WORKFLOW.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  STYLE_GUIDE.md  docker-compose.yml  justfile  prek.toml
.beads/: issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
data-pipeline/: Dockerfile  README.md  build_snapshot.py  dbt_project.yml  fetch.py  pyproject.toml  storage_paths.py
data-pipeline/.dbt/: profiles.yml
data-pipeline/docker/: run-fetch.sh  start-cron.sh  weather-fetch.cron
data-pipeline/models/: README.md  sources.yml
data-pipeline/models/marts/: dashboard_summary.sql  fct_weather_history.sql  location_catalog.sql  weather_daily_history.sql  weather_monthly_extremes.sql
data-pipeline/models/staging/: stg_raw_weather.sql
data-pipeline/src/data_pipeline/: __init__.py
data-pipeline/tests/: test_snapshot_builder.py
frontend/: .gitignore  .prettierignore  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  index.html  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/src/: app.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx
frontend/src/components/: dashboard.tsx  location-search-panel.module.css  location-search-panel.tsx  location-search.tsx  observation-table.module.css  observation-table.tsx  (+4 more)
scripts/: clean.sh  setup-local.sh  validate.sh
(+67 files in other folders)
