[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "duckdb>=1.4.4",
    "dbt-duckdb>=1.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
